--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
         <h2>Email:CovetInsurance@gmail.com &nbsp Facebook:covetinsurance &nbsp Instagram:covetInsure</h2>
     </div>
     <div class="navbar">
+        <div class="navbar-inner">
         <ul>
            <a href=""><li>Home</li></a>
            <a href=""><li>About</li></a>
@@ -23,8 +24,18 @@
     </div>
     <div class="heading">
         <h1>Covet-Insurance</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eligendi! At maxime sapiente eos quia harum ab, <br>enim consequuntur alias accusantium hic quas corporis nostrum laborum velit minus aperiam laudantium!</p>
-<img src="./images/7ad780e98899a2b10ed13b0406cc6ec5-removebg-preview.png">
+        <p>Loripisicing elit. Necessitatibus, eligendi! At maxime sapiente eos quia harum ab, <br>enim consequuntur alias accusantium hic quainus aperiam laudantium!</p>
+<button type="button"><h3>READ MORE</h3></button> 
+<button type="button"><h3>GET INSURED</h3></button>
+
+        <img src="./images/7ad780e98899a2b10ed13b0406cc6ec5-removebg-preview.png">
+    </div>
+    </div>
+
+    <div class="bottom">
+        <img src="./images/kl.png">
+        <img src="./images/ol.png">
+        <img src="./images/lo.png">
     </div>
     <!-- <div class="aside">
         <aside><img src="./images/1887286-removebg-preview.png"></aside>
